--- a/css/widget.css
+++ b/css/widget.css
@@ -1,6 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
-}
+
 .header {
     text-align: right;
     padding: 20px;
@@ -23,9 +21,10 @@ body {
     margin-top: 50px;
 }
 .widget {
-    background-color: #d3d3d3;
+    background-color: #d3d3d37b;
     padding: 50px;
     width: 150px;
+    height: 150px;
     text-align: center;
     font-size: 30px;
     cursor: pointer;
@@ -33,8 +32,8 @@ body {
     transition: 0.3s;
 }
 .widget:hover {
-    box-shadow: 0 0 10px purple;
-    border: 2px solid purple;
+    box-shadow: 0 0 10px white;
+    border: 2px solid white;
 }
 /* Modal Styles */
 .modal {
@@ -43,9 +42,9 @@ body {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;   /* hier ist noch was falsch */
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.15);
 }
 .modal-content {
     background-color: white;
@@ -53,9 +52,10 @@ body {
     padding: 20px;
     width: 300px;
     text-align: center;
+    border-radius: 10px;
 }
 .close {
-    color: red;
+    color: black;
     float: right;
     font-size: 28px;
     cursor: pointer;
