--- a/css/widget.css
+++ b/css/widget.css
@@ -90,8 +90,9 @@
 
 .close {
 	color: black;
-	float: right;
+	position: absolute;
+	top: 10px;
+	right: 10px;
 	font-size: 50px;
 	cursor: pointer;
-	margin-top: -20px;
 }
