--- a/css/widget.css
+++ b/css/widget.css
@@ -37,6 +37,7 @@ body {
 	cursor: pointer;
 	border-radius: 10px;
 	transition: 0.3s;
+	margin: 16px; /* Abstand zwischen den Boxen */
 }
 
 .widget:hover {
