--- a/css/tokyo.css
+++ b/css/tokyo.css
@@ -5,16 +5,6 @@
     box-sizing: border-box;
   }
   
-  body {
-    font-family: 'Inter', sans-serif;
-    color: #333;
-    line-height: 1.6;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    height: 100vh;
-  }
-  
   /* Styling für das SVG-Element */
   svg {
     transition: transform 0.3s ease;
@@ -45,7 +35,7 @@
   }
   
   /* Responsive Design */
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
 
   
     svg {
@@ -56,5 +46,5 @@
     text {
       font-size: 12px;
     }
-  }
+  } */
   
