--- a/css/tokyo.css
+++ b/css/tokyo.css
@@ -1,7 +1,7 @@
 /* Animation beim Laden der Seite */
-/* body {
+body {
   overflow: hidden;
-} */
+}
 @keyframes loadAnimation {
   0% {
     transform: translateX(-100%) scale(0);
