--- a/css/circle.css
+++ b/css/circle.css
@@ -51,7 +51,7 @@
     appearance: none;
     width: 14px;
     height: 14px;
-    background: #333;
+    background: #ffffff;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -59,7 +59,7 @@
 #slider::-moz-range-thumb {
     width: 14px;
     height: 14px;
-    background: #333;
+    background: #ffffff;
     border-radius: 50%;
     cursor: pointer;
 }
