--- a/css/content.css
+++ b/css/content.css
@@ -29,10 +29,10 @@
 	font-size: 1.5rem;
 	position: absolute; /* Position absolut für die Anzeige */
 	top: 15%; /* Positionieren */
-	right: 2%; /* Positionieren */
+	align-items: center;
 	transform: translateX(0); /* Zentrieren */
-	max-width: 1000px; /* Breitenlimit für den Text */
-	margin-left: auto;
+	/* max-width: 1000px; */
+	/* margin-left: auto; */
 	line-height: 1.5;
 	font-weight: 400;
 }
