--- a/css/tabs.css
+++ b/css/tabs.css
@@ -12,6 +12,25 @@
 	flex: 1; /* Standardmäßige Breite der anderen Tabs */
 }
 
+/* p {
+	animation: coolAnimation 2s;
+}
+
+@keyframes coolAnimation {
+	0% {
+		transform: scale(1);
+		opacity: 0;
+	}
+	50% {
+		transform: scale(1.1);
+		opacity: 0.5;
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+} */
+
 .container label:nth-child(1) {
 	background: #e4e4e4; /* Base */
 	flex: 2; /* Macht diesen Tab 10-mal breiter im normalen Zustand */
