--- a/css/tokyo.css
+++ b/css/tokyo.css
@@ -42,7 +42,7 @@ circle:nth-child(even) {
   animation: loadAnimationFromRight 1s ease-out;
 }
 
-@keyframes loadAnimationFromLeft {
+/* @keyframes loadAnimationFromLeft {
   0% {
     transform: translateX(-100%) scale(0);
     opacity: 0;
@@ -62,11 +62,8 @@ circle:nth-child(even) {
     transform: translateX(0) scale(1);
     opacity: 1;
   }
-}
+} */
 
-rect:hover {
-  fill: #e35470;
-}
 
 /* Allgemeine Schriftart */
 body, svg {
@@ -102,6 +99,7 @@ circle:hover {
   stroke: black;
   stroke-width: 2px;
   cursor: pointer;
+  scale: 1.1;
   /* opacity: 0.25; */
 }
 
