--- a/css/bubbles_newyork.css
+++ b/css/bubbles_newyork.css
@@ -1,12 +1,12 @@
 .bubble {
 	fill: transparent;
-	stroke: white;
+	stroke: black;
 	stroke-width: 2px;
 	cursor: pointer;
 }
 
 text {
-	fill: white;
+	fill: black;
 	font-size: 12px;
 	text-anchor: middle;
 	pointer-events: none;
@@ -19,9 +19,3 @@ text {
 	width: 100%;
 	height: 100vh; /* Full viewport height */
 }
-
-/* .bubble:hover {
-	stroke: white;
-} */
-
-
