--- a/css/circle.css
+++ b/css/circle.css
@@ -1,10 +1,10 @@
-/* Canvas und Slider standardmäßig ausblenden */
+
 #paris-container canvas,
 #paris-container #slider-container {
 	display: none;
 }
 
-/* Zeige den Canvas und den Slider nur, wenn der Paris-Container oder der Label-Tab gehovered wird */
+
 #content.paris:hover ~ .tab-content #paris-container canvas,
 #content.paris:hover ~ .tab-content #paris-container #slider-container,
 #paris-container:hover canvas,
@@ -12,35 +12,35 @@
 	display: block;
 }
 
-/* Der Container für die Kreise und den Slider */
+
 #paris-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center; /* Zentriert den Inhalt horizontal */
-	height: 10%; /* Volle Höhe des Containers */
-	padding: 20px; /* Optional, um etwas Platz zu lassen */
+	align-items: center; 
+	height: 10%; 
+	padding: 20px; 
 }
 
-/* Zentriere den Canvas in der Mitte */
+
 #paris-container canvas {
 	display: block;
-	margin: 10px auto; /* Mittig ausrichten */
+	margin: 10px auto; 
 }
 
-/* Slider Container anpassen */
+
 #slider-container {
-	width: 60%; /* Slider etwas größer machen */
+	width: 60%; 
 	margin-top: 20px;
 	position: relative;
-	margin: 0 auto; /* Mittig ausrichten */
+	margin: 0 auto; 
 }
 
 #slider {
 	width: 100%;
 	appearance: none;
-	height: 6px; /* Höhe des Sliders um 50% vergrößert */
-	background: white; /* Slider-Hintergrund */
+	height: 6px; 
+	background: white; 
 	border-radius: 5px;
 	outline: none;
 }
