--- a/css/content.css
+++ b/css/content.css
@@ -25,7 +25,7 @@
 .tab-content {
 	display: none; /* Inhalt ist nicht sichtbar */
 	color: white; /* Standard-Textfarbe */
-	text-align: right;
+	text-align: left;
 	font-size: 1.5rem;
 	position: absolute; /* Position absolut für die Anzeige */
 	top: 15%; /* Positionieren */
@@ -71,7 +71,7 @@
 
 .tab-content h3 {
 	max-width: 1000px;
-	margin-left: auto;
+	margin-right: auto;
 	text-align: right;
 	font-weight: 300;
 	font-size: 1.5rem;
@@ -79,7 +79,7 @@
 
 .tab-content h6 {
 	max-width: 1000px;
-	text-align: left;
+	text-align: right;
 	font-weight: 400;
 	position: relative;
 	margin-left: auto;
